# ERAV4-ass4

./: .dockerignore  .gitignore  Dockerfile  README.md  cdk.json  cdk.py  config.py  dataset.py  gradio_app.py  main.py  model.py  pred.py  preprocessing_mnist_data.py  pyproject.toml  requirements.txt  simple_gradio_app.py  tmp.ipynb  train.py  utils.py
